--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.16.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.12",
     "mongoose": "^5.0.11",
     "morgan": "^1.9.0"
   }
